// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentSettingsLink with children renders link with custom text 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2F75D7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-0:visited {
  color: #903D91;
}

.emotion-0:hover {
  color: #2F75D7;
}

.emotion-0:active {
  color: #2F75D7;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    Some Custom Link Text
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with link props renders link with styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2e2e2e;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-0:visited {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #2e2e2e;
}

.emotion-0:active {
  color: #2e2e2e;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    Some Custom Link Text With Styles
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with no children renders link with default text 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #2F75D7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-0:visited {
  color: #903D91;
}

.emotion-0:hover {
  color: #2F75D7;
}

.emotion-0:active {
  color: #2F75D7;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    Manage Consent
  </a>
</DocumentFragment>
`;
